objects/Claim__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unternehmen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_In_Dispute_Claim_Letter__c</fullName>
        <label>Streitwert Außergerichtlich</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_In_Dispute_Lawsuit__c</fullName>
        <label>Streitwert Gerichtlich</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_In_Dispute__c</fullName>
        <formula>Opportunity__r.Amount_In_Dispute__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aktueller Streitwert</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appeal_Date__c</fullName>
        <label>Datum Berufung</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appeal_Insurance_Date__c</fullName>
        <label>Datum Deckungsanfrage Berufung</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Arrangement__c</fullName>
        <label>Vergleich</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                    <label>Angenommen</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                    <label>Abgelehnt</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authorization_Incorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vollmacht fehlerhaft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BypassProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Canceled_Next_Court_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gerichtstermin abgesagt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claim_Letter_Date_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Claim_Letter_Date__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Claim_Letter_Date__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Claim_Letter_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim Letter Date Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Letter_Date__c</fullName>
        <label>Datum Anspruchsschreiben</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_Letter_Insurance_Date__c</fullName>
        <label>Datum Deckungsanfrage Anspruchsschreiben</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_Letter_Response_Date_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Response_Claim_Letter__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Response_Claim_Letter__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Response_Claim_Letter__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim Letter Response Date Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Letter_Term_1__c</fullName>
        <formula>Claim_Letter_Term__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim Letter Term + 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_Letter_Term_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Claim_Letter_Term__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Claim_Letter_Term__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Claim_Letter_Term__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim Letter Term Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Letter_Term__c</fullName>
        <label>Frist Anspruchsschreiben</label>
        <summarizedField>Correspondence__c.Term__c</summarizedField>
        <summaryFilterItems>
            <field>Correspondence__c.Type__c</field>
            <operation>equals</operation>
            <value>Anspruchsschreiben</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Correspondence__c.Stage__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>Correspondence__c.Claim__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Clarification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nachprüfung</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clerk_Appeal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sachbearbeiter Berufung</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Claims_Clerk_Appeal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clerk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sachbearbeiter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Claims_Clerk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competent_Court__c</fullName>
        <label>Zuständiges Gericht</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competent_Courts</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correspondece_Status__c</fullName>
        <label>Korrespondenz Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CorrespondenceCountFlow__c</fullName>
        <label>CorrespondenceCountFlow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Correspondence_Follow_up_Period__c</fullName>
        <defaultValue>14</defaultValue>
        <label>Korrespondenz Zeit bis Wiedervorlage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Correspondence_Types__c</fullName>
        <label>Korrespondenz Types</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Widerspruch durch Kunden</fullName>
                </value>
                <value>
                    <fullName>Deckungsanfrage für Widerspruch</fullName>
                </value>
                <value>
                    <fullName>Widerspruch durch Anwalt</fullName>
                </value>
                <value>
                    <fullName>Deckungsanfrage für Anspruchsschreiben</fullName>
                </value>
                <value>
                    <fullName>Anspruchsschreiben</fullName>
                </value>
                <value>
                    <fullName>Deckungsanfrage für Klage</fullName>
                </value>
                <value>
                    <fullName>Klageschrift</fullName>
                </value>
                <value>
                    <fullName>Deckungsanfrage für Berufung</fullName>
                </value>
                <value>
                    <fullName>Gerichtskostenrechnung</fullName>
                </value>
                <value>
                    <fullName>Replik</fullName>
                </value>
                <value>
                    <fullName>Vollmacht §141 ZPO</fullName>
                </value>
                <value>
                    <fullName>Sonstiges</fullName>
                </value>
                <value>
                    <fullName>Eingehend</fullName>
                </value>
                <value>
                    <fullName>Deckungszusage für Verteidigungsanzeige</fullName>
                </value>
                <value>
                    <fullName>Fristverlängerung</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Court_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gericht des Kunden</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Nur Gerichte dürfen hier ausgewählt werden.</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Gericht</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fälle (Gericht des Kunden)</relationshipLabel>
        <relationshipName>Claims_Court_Customer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Court_Reference__c</fullName>
        <label>Gerichtliches Aktenzeichen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Court__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Gericht des Gegners</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Nur Gerichte dürfen hier ausgewählt werden.</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Gericht</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fälle (Gericht)</relationshipLabel>
        <relationshipName>Claims_Court</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cover_Note_For_Claim_Status__c</fullName>
        <formula>IF( AND(ISPICKVAL(Cover_Note__c, 'Issued'), ISBLANK(Response_Insurance_Lawsuit__c)) , 'Erteilt', IF(ISPICKVAL(Cover_Note__c, 'Refused'),'Abgelehnt',IF(NOT(ISBLANK(Response_Insurance_Lawsuit__c)),'Erteilt', '')))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deckungszusage Anspruchsschreiben</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cover_Note_For_Lawsuit_Status__c</fullName>
        <formula>IF(NOT(ISBLANK(Response_Insurance_Lawsuit__c)),IF(ISPICKVAL(Cover_Note__c, 'Issued'),'Erteilt', IF(ISPICKVAL(Cover_Note__c, 'Refused'),'Abgelehnt','')),'')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deckungszusage Klage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cover_Note_For_Lawsuit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deckungszusage direkt für Klage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cover_Note_Scope__c</fullName>
        <label>Deckungsumfang</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Claim_Cover_Note_Scopes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cover_Note__c</fullName>
        <label>Deckungszusage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Claim_Cover_Note_Statuses</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_Date_Old_Org__c</fullName>
        <label>Created Date Old Org</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Is_Not_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kunde ist nicht Eigentümer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Is_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kunde ist Eigentümer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Opposition_Date_15__c</fullName>
        <formula>Customer_Opposition_Date__c + 15</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Opposition Date + 15</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Opposition_Date_5_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Customer_Opposition_Date_5__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Customer_Opposition_Date_5__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Customer_Opposition_Date_5__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Opposition Date + 5 Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Opposition_Date_5__c</fullName>
        <formula>Customer_Opposition_Term__c +5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Opposition Date + 5</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Opposition_Date_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Customer_Opposition_Date__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Customer_Opposition_Date__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Customer_Opposition_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Opposition Date Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Opposition_Date__c</fullName>
        <label>Datum Kundenwiderspruch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Opposition_Response_Date_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Response_Customer_Opposition__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Response_Customer_Opposition__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Response_Customer_Opposition__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Opposition Response Date Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Opposition_Term__c</fullName>
        <label>Frist Kundenwiderspruch</label>
        <summarizedField>Correspondence__c.Term__c</summarizedField>
        <summaryFilterItems>
            <field>Correspondence__c.Type__c</field>
            <operation>equals</operation>
            <value>Widerspruch durch Kunden</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Correspondence__c.Stage__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>Correspondence__c.Claim__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Stage_Change__c</fullName>
        <formula>ROUND(Now() - Last_Stage_Change__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tage seit letztem Statuswechsel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engine_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Engine_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Motortyp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_code__c</fullName>
        <formula>Opportunity__r.Engine_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Motorcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Record_Type_Id__c</fullName>
        <formula>IF( RecordTypeId = '0120Y000000W0lr', '0121r000000d47I', '')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Record Type Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extrajudicial_Cost_Note_Number__c</fullName>
        <label>Nummer der ag. Kostennote</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extrajudicial_Cost_Note_Sending_Date_Cle__c</fullName>
        <formula>LPAD(TEXT(DAY(DATEVALUE(Extrajudicial_Cost_Note_Sending_Date__c))),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(DATEVALUE(Extrajudicial_Cost_Note_Sending_Date__c))),2,'0') &amp; '.' &amp; TEXT(YEAR(DATEVALUE(Extrajudicial_Cost_Note_Sending_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extrajudicial Cost Note Sending Date Cle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extrajudicial_Cost_Note_Sending_Date__c</fullName>
        <label>Versanddatum der ag. Kostennote</label>
        <summarizedField>Cost_Note__c.Sending_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Note__c.Type__c</field>
            <operation>equals</operation>
            <value>Außergerichtlich</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Cost_Note__c.Stage__c</field>
            <operation>notEqual</operation>
            <value>Draft, Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Note__c.Claim__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>First_Request_Insurance__c</fullName>
        <formula>IF(NOT(ISBLANK(Claim_Letter_Insurance_Date__c)), Claim_Letter_Insurance_Date__c,  Lawsuit_Insurance_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Request Insurance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Response_Insurance__c</fullName>
        <formula>IF(NOT(ISBLANK(Response_Insurance_Claim_Letter__c)), Response_Insurance_Claim_Letter__c,  Response_Insurance_Lawsuit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Response Insurance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_up_Period__c</fullName>
        <defaultValue>14</defaultValue>
        <label>Zeit bis Wiedervorlage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_Hash_1__c</fullName>
        <label>Form Hash 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_My_Claim__c</fullName>
        <formula>OR($User.Id = Legal__c,$User.Id = Clerk__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Claim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Korrespondenz_Status_set_to_Sent__c</fullName>
        <label>Korrespondenz Status set to Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Korrespondenz_Wiedervorlage_erstellen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Korrespondenz Wiedervorlage erstellen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Korrespondenzen__c</fullName>
        <label>Korrespondenzen</label>
        <summaryForeignKey>Correspondence__c.Claim__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Request_Insurance_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Last_Request_Insurance__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Last_Request_Insurance__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Last_Request_Insurance__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Request Insurance Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Request_Insurance__c</fullName>
        <formula>IF(NOT(ISBLANK(Lawsuit_Insurance_Date__c)), Lawsuit_Insurance_Date__c, Legal_Opposition_Insurance_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Request Insurance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Stage_Change__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Letzter Statuswechsel</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lawsuit_Date__c</fullName>
        <label>Datum Klage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lawsuit_Insurance_Date__c</fullName>
        <label>Datum Deckungsanfrage Klage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lawyer_identifier__c</fullName>
        <label>Anwalt Kennung</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Costs_Extrajudicial_Clean__c</fullName>
        <formula>IF(Legal_Costs_Extrajudicial__c &gt; 1000, 

IF(Legal_Costs_Extrajudicial__c &gt; 1000000, 

LEFT(TEXT(FLOOR(Legal_Costs_Extrajudicial__c)),LEN(TEXT(FLOOR(Legal_Costs_Extrajudicial__c))) - 6) + '.' + LEFT(RIGHT(TEXT(FLOOR(Legal_Costs_Extrajudicial__c)),6),3) + '.' + RIGHT(TEXT(FLOOR(Legal_Costs_Extrajudicial__c)),3), 
LEFT(TEXT(FLOOR(Legal_Costs_Extrajudicial__c)),LEN(TEXT(FLOOR(Legal_Costs_Extrajudicial__c))) - 3) + '.' + RIGHT(TEXT(FLOOR(Legal_Costs_Extrajudicial__c)),3) 

), 

TEXT(FLOOR(Legal_Costs_Extrajudicial__c))) 

+ IF(MOD(Legal_Costs_Extrajudicial__c,1) &gt; 0,',' + RIGHT(TEXT(MOD(Legal_Costs_Extrajudicial__c,1)),2) + ' €',',00 €')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Costs Extrajudicial Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Costs_Extrajudicial__c</fullName>
        <label>Anwaltskosten (außergerichtlich)</label>
        <summarizedField>Cost_Note__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Note__c.Type__c</field>
            <operation>equals</operation>
            <value>Außergerichtlich</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Note__c.Claim__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Legal_Costs_Judicial_old__c</fullName>
        <label>Anwaltskosten (gerichtlich alt)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legal_Costs__c</fullName>
        <label>Anwaltskosten (gesamt)</label>
        <summarizedField>Cost_Note__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Note__c.Stage__c</field>
            <operation>notEqual</operation>
            <value>Replaced, Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Note__c.Claim__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Legal_Opposition_Date_Clean__c</fullName>
        <formula>TEXT(DAY(Legal_Opposition_Date__c)) &amp; '.' &amp; TEXT(MONTH(Legal_Opposition_Date__c)) &amp; '.' &amp; TEXT(YEAR(Legal_Opposition_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Opposition Date Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Opposition_Date__c</fullName>
        <label>Datum Anwaltswiderspruch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Opposition_Insurance_Date__c</fullName>
        <label>Datum Deckungsanfrage Anwaltswiderspruch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Opposition_Response_Date_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Response_Legal_Opposition__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Response_Legal_Opposition__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Response_Legal_Opposition__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Opposition Response Date Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Opposition_Term_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Legal_Opposition_Term__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Legal_Opposition_Term__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Legal_Opposition_Term__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Opposition Term Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Opposition_Term__c</fullName>
        <label>Frist Anwaltswiderspruch</label>
        <summarizedField>Correspondence__c.Term__c</summarizedField>
        <summaryFilterItems>
            <field>Correspondence__c.Type__c</field>
            <operation>equals</operation>
            <value>Widerspruch durch Anwalt</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Correspondence__c.Stage__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>Correspondence__c.Claim__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Legal_Protection_Insurance_Case_Number__c</fullName>
        <label>Schadensnummer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Protection_Insurance_Number__c</fullName>
        <formula>Opportunity__r.Legal_Protection_Insurance_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rechtsschutzversicherungsnummer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Protection_Response_Date_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Response_Insurance_Claim_Letter__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Response_Insurance_Claim_Letter__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Response_Insurance_Claim_Letter__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Protection Response Date Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person in charge for legal process parts.</description>
        <label>Anwalt</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Legal</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Management</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Claims_Legal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_Ownership__c</fullName>
        <formula>HYPERLINK($Label.SiteRoot + '/OwnershipConfirmation?token=' + Token__c ,'Link Rückfrage zur Eigentümerschaft','_blank')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link Rückfrage zur Eigentümerschaft</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Court_Date__c</fullName>
        <label>Nächster Gerichtstermin</label>
        <summarizedField>Date__c.Date__c</summarizedField>
        <summaryFilterItems>
            <field>Date__c.Type__c</field>
            <operation>equals</operation>
            <value>Gerichtstermin</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Date__c.Stage__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </summaryFilterItems>
        <summaryForeignKey>Date__c.Claim__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Old_Fall_ID__c</fullName>
        <label>Old Fall ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <externalId>true</externalId>
        <label>Old Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_In_Dispute__c</fullName>
        <formula>Opportunity__r.Amount_In_Dispute__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount In Dispute</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Legal_Account_Id__c</fullName>
        <formula>Opportunity__r.Legal_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Legal Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <formula>Opportunity__r.Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bearbeitungsnummer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product__c</fullName>
        <formula>Opportunity__r.Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Produkt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type_Id__c</fullName>
        <formula>Opportunity__r.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Record Type Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Reference__c</fullName>
        <formula>Opportunity__r.Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Vehicle_Brand_Id__c</fullName>
        <formula>Opportunity__r.Vehicle_Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Vehicle Brand Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Anfrage</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Fälle</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opposing_Counsel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Korrespondenzanwalt</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Fälle</relationshipLabel>
        <relationshipName>Faelle_Korrespondenzanwalt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ownership_Request_Date__c</fullName>
        <label>Datum Eigentümerrückfrage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ownership_Request_Link_1__c</fullName>
        <formula>if(Form_Hash_1__c != null,IF(Opportunity__r.Account_Id__c = '0010Y00000eCUS9','https://form.verbraucherhilfe24.de/dieselskandal-004/' + Form_Hash_1__c,'https://forms.cloudworx.agency/verbraucherrechte24/006/' + Form_Hash_1__c),'muss erstellt werden')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link auf Eigentümernachfrage 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership_Request_Link_2__c</fullName>
        <formula>if(Form_Hash_1__c != null,IF(Opportunity__r.Account_Id__c = '0010Y00000eCUS9','https://form.verbraucherhilfe24.de/dieselskandal-005/' + Form_Hash_1__c,'https://forms.cloudworx.agency/verbraucherrechte24/007/' + Form_Hash_1__c),'muss erstellt werden')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link auf Eigentümernachfrage 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partial_Refund__c</fullName>
        <formula>Opportunity__r.Partial_Refund__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teilerstattungsbetrag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Opportunity__r.Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Produkt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_For_Cover_Note_Refusal__c</fullName>
        <label>Ablehnungsgrund für Deckungszusage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cover_Note_Refusal_Reasons</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Aktenzeichen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>